--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -176,6 +176,7 @@ G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
     }
     [data-gnl~="sütun"]{
       flex-direction: column;
+      align-items:stretch;
     }
 
     [data-gnl~="gizli"]{display: none;}
