--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,14 +3,14 @@
 <head>
 {% include head.html %}
 </head>
-<body data-gnl="ortada">
+<body data-gnl="sütun">
   <div data-gnl="24" class="header">
   {% include header.html %}
   </div>
   <div data-gnl="23 kaplama">
   {{ content }}
   </div>
-  <div data-gnl="24">
+  <div data-gnl="24 altta-ol">
   {% include foot.html %}
   </div>
 </body>
