--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,8 @@
   <div data-gnl="23 kaplama">
   {{ content }}
   </div>
-  <div data-gnl="24 altta-ol">
+  <footer data-gnl="24">
   {% include foot.html %}
-  </div>
+  </footer>
 </body>
 </html>
