--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,9 @@
 {% include head.html %}
 </head>
 <body data-gnl="sütun">
-  <div data-gnl="24" class="header">
+  <header data-gnl="24" class="header">
   {% include header.html %}
-  </div>
+  </header>
   <div data-gnl="23 kaplama">
   {{ content }}
   </div>
