Ekran seçici "diğerlerini-" gizle özelliği

--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -279,42 +279,61 @@ G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
     [data-mnk~="gizle"]
     {display: none;}
 
-/*  DUYARLI TİP - SONER 0 >> ∞ */
+/*  DUYARLI TİP - SONER 0 << ∞ */
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     KOCAMAN-soner (kcm) veya (kcm-soner) | Ekran ölçeği: 0 < 1900px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:1900px) {
-      [data-dev~="küçükleri-gizle"],[data-kcm~="küçükleriyle-gizle"]{display: none;}
+      [data-dev~="küçükleri-gizle"],
+      [data-dev~="diğerlerini-gizle"],
+      [data-kcm~="küçükleriyle-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     BÜYÜK-soner (byk) veya (byk-soner) | Ekran ölçeği: 0 < 1200px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:1200px) {
-      [data-kcm~="küçükleri-gizle"],[data-byk~="küçükleriyle-gizle"]{display: none;}
+      [data-kcm~="küçükleri-gizle"],
+      [data-kcm~="diğerlerini-gizle"],
+      [data-byk~="küçükleriyle-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     ORTA-soner (ort) veya (ort-soner) | Ekran ölçeği: 0 < 992px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:993px) {
-      [data-byk~="küçükleri-gizle"],[data-ort~="küçükleriyle-gizle"]{display: none;}
+      [data-byk~="küçükleri-gizle"],
+      [data-byk~="diğerlerini-gizle"],
+      [data-ort~="küçükleriyle-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     KÜÇÜK-soner (kçk) veya (kçk-soner) | Ekran ölçeği: 0 < 768px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:768px) {
-      [data-ort~="küçükleri-gizle"],[data-kçk~="küçükleriyle-gizle"]{display: none;}
+      [data-ort~="küçükleri-gizle"],
+      [data-ort~="diğerlerini-gizle"],
+      [data-kçk~="küçükleriyle-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     UFAK-soner (ufk) veya (ufk-soner) | Ekran ölçeği: 0 < 576px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:576px) {
-      [data-kçk~="küçükleri-gizle"],[data-ufk~="küçükleriyle-gizle"]{display: none;}
+      [data-kçk~="küçükleri-gizle"],
+      [data-kçk~="diğerlerini-gizle"],
+      [data-ufk~="küçükleriyle-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     MİNİK-soner (mnk) veya (mnk-soner) | Ekran ölçeği: 0 < 300px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:300px) {
-      [data-ufk~="küçükleri-gizle"],[data-mnk~="küçükleriyle-gizle"],[data-mnk~="bunu-gizle"]{display: none;}
+      [data-ufk~="küçükleri-gizle"],
+      [data-ufk~="diğerlerini-gizle"],
+      [data-mnk~="küçükleriyle-gizle"],
+      [data-mnk~="bunu-gizle"]
+      {display: none;}
     }
 
 /*  DUYARLI TİP İLKER * >> ∞ */
@@ -400,7 +419,8 @@ S01 UFAK-İLKER (ufk) veya (ufk-soner) | Ekran ölçeği: 300px ≤ *
 
       [data-ufk~="gizle"],
       [data-ufk~="büyükleriyle-gizle"],
-      [data-mnk~="büyükleri-gizle"]
+      [data-mnk~="büyükleri-gizle"],
+      [data-mnk~="diğerlerini-gizle"]
       {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -481,7 +501,8 @@ S02 KÇK-ilker (kçk) veya (kçk-ilker) | Ekran ölçeği: 576px ≤ *
 
       [data-kçk~="gizle"],
       [data-kçk~="büyükleriyle-gizle"],
-      [data-ufk~="büyükleri-gizle"]
+      [data-ufk~="büyükleri-gizle"],
+      [data-ufk~="diğerlerini-gizle"]
       {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -562,7 +583,8 @@ S03 ORTA-ilker (ort) veya (ort-ilker) | Ekran ölçeği: 768px ≤ *
 
       [data-ort~="gizle"],
       [data-ort~="büyükleriyle-gizle"],
-      [data-kçk~="büyükleri-gizle"]
+      [data-kçk~="büyükleri-gizle"],
+      [data-kçk~="diğerlerini-gizle"]
       {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -643,7 +665,8 @@ S04 BÜYÜK-ilker (byk) veya (byk-ilker) | Ekran ölçeği: 992px ≤ *
 
       [data-byk~="gizle"],
       [data-byk~="büyükleriyle-gizle"],
-      [data-ort~="büyükleri-gizle"]
+      [data-ort~="büyükleri-gizle"],
+      [data-ort~="diğerlerini-gizle"]
       {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -724,7 +747,8 @@ S05 KOCAMAN-ilker (kcm) veya (kcm-ilker) | Ekran ölçeği: 1200px ≤ *
 
       [data-kcm~="gizle"],
       [data-kcm~="büyükleriyle-gizle"],
-      [data-byk~="büyükleri-gizle"]
+      [data-byk~="büyükleri-gizle"],
+      [data-byk~="diğerlerini-gizle"]
       {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -813,7 +837,11 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="satırda"]{align-items: baseline;}
       [data-dev~="satırda-ol"]{align-self: baseline;}
 
-      [data-dev~="büyükleriyle-gizle"],[data-dev~="büyükleri-gizle"],[data-kcm~="büyükleri-gizle"]{display: none;}
+      [data-dev~="büyükleriyle-gizle"],
+      [data-dev~="büyükleri-gizle"],
+      [data-kcm~="büyükleri-gizle"],
+      [data-kcm~="diğerlerini-gizle"]
+      {display: none;}
     }
 
 /*  DUYARLI TİP - YALIN |< * >| */
@@ -833,7 +861,9 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         max-width: 100%;
       }
-      [data-mnk~="bunu-gizle"]{display: none;}
+      /* Gizleme */
+      [data-mnk~="bunu-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     UFAK-YALIN (ufk) veya (ufk-yalın) | Ekran ölçeği: 300px ≤ * < 576px
@@ -851,7 +881,9 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         max-width: calc(100% - 20px);
       }
-      [data-ufk~="bunu-gizle"]{display: none;}
+      /* Gizleme */
+      [data-ufk~="bunu-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     KÇK-YALIN (kçk) veya (kçk-yalın) | Ekran ölçeği: 576px ≤ * < 768px
@@ -869,7 +901,9 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         max-width: 566px;
       }
-      [data-kçk~="bunu-gizle"]{display: none;}
+      /* Gizleme */
+      [data-kçk~="bunu-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     ORTA-YALIN (ort) veya (ort-yalın)
@@ -888,7 +922,9 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         max-width: 760px;
       }
-      [data-ort~="bunu-gizle"]{display: none;}
+      /* Gizleme */
+      [data-ort~="bunu-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     BÜYÜK-YALIN (byk) veya (byk-yalın) | Ekran ölçeği: 992px ≤ * < 1200px
@@ -906,7 +942,9 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         max-width: 960px;
       }
-      [data-byk~="bunu-gizle"]{display: none;}
+      /* Gizleme */
+      [data-byk~="bunu-gizle"]
+      {display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     KOCAMAN-YALIN (kcm) veya (kcm-yalın) | Ekran ölçeği: 1200px ≤ * < 1900px
@@ -923,7 +961,9 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-kcm~="küçükleriyle-kaplama"]{
         max-width: 1140px;
       }
-      [data-kcm~="bunu-gizle"]{display: none;}
+      /* Gizleme */
+      [data-kcm~="bunu-gizle"]
+      {display: none;}
     }
 
 /* ==========================================================================
