--- a/_layouts/tek.html
+++ b/_layouts/tek.html
@@ -3,15 +3,15 @@
 <head>
 {% include head.html %}
 </head>
-<body data-gnl="ortada">
-  <div data-gnl="24" class="header">
+<body data-gnl="sütun">
+  <header data-gnl="24" class="header">
   {% include header.html %}
-  </div>
+  </header>
   <div data-gnl="23 kaplama">
   {{ content }}
   </div>
-  <div data-gnl="24">
+  <footer data-gnl="24">
   {% include foot.html %}
-  </div>
+</footer>
 </body>
 </html>
