--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
 <head>
 {% include head.html %}
 </head>
-<body data-gnl="ortada">
-  <div data-gnl="24" class="header">
+<body data-gnl="sütun">
+  <header data-gnl="24" class="header">
   {% include header.html %}
-  </div>
+  </header>
   <div data-gnl="23 kaplama">
     <div data-gnl="24" data-ort="4">
     {% include icerik.html %}
@@ -15,8 +15,8 @@
     {{ content }}
     </div>
   </div>
-  <div data-gnl="24">
+  <footer data-gnl="24">
   {% include foot.html %}
-  </div>
+  </footer>
 </body>
 </html>
