--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -107,7 +107,7 @@ pre{
 .logo{
 	font-family: 'Comfortaa', cursive;
 	font-size: 26px;
-	color:#2c2171 !important;
+	color:#fff !important;
 	font-weight: bold !important;
 }
 .ap-kara	{background-color:#222;}
