--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -151,7 +151,9 @@ box-shadow: 0 2px 0 hsla(200,9%,93%,.25);
 	.menü-genel li{display: inline-block;margin-right: 5px;font-size: 11pt;}
 	.menü-genel li a{ opacity: .8;display: inline-block; text-decoration: none; padding:8px; color: #fff; font-weight: 300;-webkit-transition: .3s all;
 -o-transition: .3s all;
-transition: .3s all;}
+transition: .3s all;
+font-weight: 600;
+font-size: 13px;}
 	.menü-genel li a:hover{
 		opacity: 1;
 		color: #fff !important;
