--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="header" data-gnl="24 24p ortada göbekte" class="beri-alt-1 kenar-alt">
   <div data-gnl="ortada göbekte" data-ort="solda">
     <ul class="menü-genel" data-gnl="0 göbekte">
-      <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
+      <li><a href="https://data-deveb.github.io" class="logo beri-sol-1">deveb</a></li>
     </ul>
     <ul class="menü-genel" data-gnl="1 1p göbekte ortada" data-ort="0">
       <li><a href="/belgeler/deveb.html">Belgeler</a></li>
