--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <header data-gnl="24" class="header">
   {% include header.html %}
   </header>
-  <div data-gnl="23 kaplama">
+  <div data-gnl="23 göbekte-ol">
     <div data-gnl="24" data-ort="4">
     {% include icerik.html %}
     </div>
