--- a/_layouts/tek.html
+++ b/_layouts/tek.html
@@ -7,7 +7,7 @@
   <header data-gnl="24" class="header">
   {% include header.html %}
   </header>
-  <div data-gnl="23 kaplama">
+  <div data-gnl="23 göbekte-ol">
   {{ content }}
   </div>
   <footer data-gnl="24">
