--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -163,7 +163,7 @@ font-size: 13px;}
 			-webkit-transition: .3s all;
 			-o-transition: .3s all;
 	}
-	footer .menü-genel{color:#333 !important;}
+	footer .menü-genel li a{color:#333 !important;}
 /* ==========================================================================
     METİN
     Metin görünümleri
