--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,11 @@
       <li><a href="/belgeler/takim.html">Takım</a></li>
       <li><a href="/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
     </ul>
+    <ul class="menü-genel" data-ort="sağda-ol">
+      <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-users" aria-hidden="true"></i></a></li>
+      <li><a href="https://twitter.com/datadeveb"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+    </ul>
   </div>
 </div>
