--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
   <header data-gnl="24" class="header">
   {% include header.html %}
   </header>
+  <div data-gnl="1 1p">
+    <h1>{% if page.title %} {{ page.title }}{% endif %}</h1>
+  </div>
   <div data-gnl="23 göbekte-ol" data-dev="kaplama">
     <div data-gnl="24" data-ort="4">
     {% include icerik.html %}
