--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   {% include header.html %}
   </header>
   {% if page.title %}<div data-gnl="1 1p">
-    <h1>{{ page.title }}}</h1>
-  </div>{% endif %
+    <h1>{{ page.title }}</h1>
+  </div>{% endif %}
   <div data-gnl="23 göbekte-ol" data-dev="kaplama">
     <div data-gnl="24" data-ort="4">
     {% include icerik.html %}
