--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
   <header data-gnl="24" class="header">
   {% include header.html %}
   </header>
-  {% if page.title %}<div data-gnl="1 1p">
-    <h1>{{ page.title }}</h1>
+  {% if page.title %}<div data-gnl="1 1p" class="sayfa-başlığı">
+    <h1 data-gnl="23 24p göbekte-ol">{{ page.title }}</h1>
   </div>{% endif %}
   <div data-gnl="23 göbekte-ol" data-dev="kaplama">
     <div data-gnl="24" data-ort="4">
