--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -94,6 +94,9 @@ pre{
 
 .sayfa-başlığı{
 	background:rgb(114, 137, 218) none repeat scroll 0% 0%;
+	padding-top:20px;
+	padding-bottom:15px;
+	color:#fff;
 }
 
 
